--- a/assets/css/spring2017/hacbot.css
+++ b/assets/css/spring2017/hacbot.css
@@ -219,28 +219,6 @@ input:-moz-placeholder {
           text-decoration: none;
           color: inherit;
           -webkit-tap-highlight-color: transparent; }
-  .top_result > .event {
-    opacity: 0;
-    color: white;
-    margin-top: 70px;
-    position: relative;
-    float: left;
-    clear: left;
-    padding: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    border-radius: 5px;
-    animation: showResult 0.5s ease-out .6s forwards; }
-    .top_result > .event > table {
-      position: relative;
-      float: left;
-      clear: both; }
-      .top_result > .event > table tbody tr td {
-        padding: 10px 20px; }
-        .top_result > .event > table tbody tr td.time {
-          border-right: solid 1px white;
-          font-size: 1.7em;
-          font-weight: 300; }
 
 .more_results {
   display: block;
@@ -331,26 +309,6 @@ input:-moz-placeholder {
   animation: quickLinks 0.5s ease-out .9s forwards; }
   .quick_links > form > input[type=submit] {
     display: none; }
-  .quick_links > form > label > .link {
-    position: relative;
-    float: left;
-    clear: none;
-    padding: 10px;
-    border-bottom: solid 2px white;
-    margin-left: 10px;
-    margin-bottom: 10px;
-    color: white;
-    background-color: transparent;
-    cursor: pointer; }
-    .quick_links > form > label > .link:hover:not(.isMobile) {
-      animation: link-color .2s ease-out 0s forwards; }
-@keyframes link-color {
-  from {
-    color: white;
-    background-color: transparent; }
-  to {
-    color: black;
-    background-color: white; } }
   .quick_links.isMobile {
     margin-top: 120px;
     width: 100%; }
@@ -399,7 +357,26 @@ input:-moz-placeholder {
     font-size: 1.5em;
     color: #82ddf0;
     margin-bottom: 20px; }
-
+  .quick_links > .link {
+    position: relative;
+    float: left;
+    clear: none;
+    padding: 10px;
+    border-bottom: solid 2px white;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    color: white;
+    background-color: transparent;
+    cursor: pointer; }
+    .quick_links > .link:hover:not(.isMobile) {
+      animation: link-color .2s ease-out 0s forwards; }
+@keyframes link-color {
+  from {
+    color: white;
+    background-color: transparent; }
+  to {
+    color: black;
+    background-color: white; } }
 @media (max-width: 627px) {
   .top_result:not(.isMobile) {
     width: calc(100% - 40px); }
@@ -433,4 +410,4 @@ input:-moz-placeholder {
         width: 100%;
         text-align: center; } }
 
-/*# sourceMappingURL=hackbot.css.map */
+/*# sourceMappingURL=hacbot.css.map */
