--- a/assets/css/spring2017/hackbot.scss
+++ b/assets/css/spring2017/hackbot.scss
@@ -259,6 +259,41 @@ input:-moz-placeholder { font-weight: 300; }
 		}
 
 	}
+
+	>.event{
+		opacity: 0;
+		color: white;
+		margin-top: 70px;
+		position: relative;
+		float: left;
+		clear: left;
+		padding: 20px;
+		left: 50%;
+		transform: translateX(-50%);
+		border-radius: 5px;
+		animation: showResult 0.5s ease-out .6s forwards;
+
+		>table{
+			position: relative;
+			float: left;
+			clear: both;
+			// left: 50%;
+			// transform: translateX(-50%);
+			// padding: 20px;
+			tbody{
+				tr{
+					td{
+						padding: 10px 20px;
+						&.time{
+							border-right: solid 1px white;
+							font-size: 1.7em;
+							font-weight: 300;
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
 .more_results{
@@ -386,6 +421,50 @@ input:-moz-placeholder { font-weight: 300; }
 	opacity: 0;
 	color: white;
 	margin-bottom: 20px;
+
+	>form{
+		>input[type=submit]{
+			display: none;
+		}
+		>label{
+			>.link{
+				position: relative;
+				float: left;
+				clear: none;
+				padding: 10px;
+				border-bottom: solid 2px white;
+				// border-radius: 5px;
+				margin-left: 10px;
+				margin-bottom: 10px;
+				color: white;
+				background-color: transparent;
+				cursor: pointer;
+
+
+				//{ ** INCLUDES
+					// @include quickTransition(background-color);
+				//} ** END INCLUDES
+				
+
+				&:hover:not(.isMobile){
+					@keyframes link-color{
+						from{
+							color: white;
+							background-color: transparent;
+						}
+						to{
+							color: black;
+							background-color: white;
+						}
+					}
+
+					animation: link-color .2s ease-out 0s forwards;
+					
+				}
+
+			}
+		}
+	}
 	
 	&.isMobile{
 		margin-top: 120px;
@@ -395,18 +474,24 @@ input:-moz-placeholder { font-weight: 300; }
 			width: 100%;
 			text-align: center;
 		}
-		>.link{
-			clear: both;
-			left: 50%;
-			transform: translateX(-50%);
-			margin-left: initial;
 
-			//{ ** INCLUDES
-				@include notSelectable();
-				@include noDecoration();
-			//} ** END INCLUDES
-			cursor: pointer;
-			color: white;
+		>form{
+			>label{
+				>.link{
+					clear: both;
+					left: 50%;
+					transform: translateX(-50%);
+					margin-left: initial;
+
+					//{ ** INCLUDES
+						@include notSelectable();
+						@include noDecoration();
+					//} ** END INCLUDES
+					cursor: pointer;
+					color: white;
+					text-align: center;
+				}
+			}
 		}
 	}
 
@@ -435,42 +520,7 @@ input:-moz-placeholder { font-weight: 300; }
 		color: $color-link;
 		margin-bottom: 20px;
 	}
-	>.link{
-		position: relative;
-		float: left;
-		clear: none;
-		padding: 10px;
-		border-bottom: solid 2px white;
-		// border-radius: 5px;
-		margin-left: 10px;
-		margin-bottom: 10px;
-		color: white;
-		background-color: transparent;
-		cursor: pointer;
-
-
-		//{ ** INCLUDES
-			// @include quickTransition(background-color);
-		//} ** END INCLUDES
-		
-
-		&:hover:not(.isMobile){
-			@keyframes link-color{
-				from{
-					color: white;
-					background-color: transparent;
-				}
-				to{
-					color: black;
-					background-color: white;
-				}
-			}
-
-			animation: link-color .2s ease-out 0s forwards;
-			
-		}
-
-	}
+	
 }
 
 
