--- a/assets/css/spring2017/main.css
+++ b/assets/css/spring2017/main.css
@@ -1081,6 +1081,59 @@ label {
       .page > .faq > .faq-title.isMobile {
         font-size: 1.5em;
         margin-bottom: 20vh; }
+    .page > .faq > table {
+      position: relative;
+      float: left;
+      clear: both;
+      padding: 20px;
+      left: 50%;
+      transform: translateX(-50%); }
+      .page > .faq > table tbody tr td {
+        color: white;
+        text-align: center;
+        padding: 40px; }
+        .page > .faq > table tbody tr td.isMobile {
+          padding: 20px; }
+        .page > .faq > table tbody tr td div {
+          position: relative;
+          float: left;
+          width: calc(100% - 40px);
+          height: 100%;
+          background-color: white;
+          color: black;
+          border-radius: 2px;
+          padding: 20px;
+          -webkit-user-select: none;
+          /* Chrome/Safari */
+          -moz-user-select: none;
+          /* Firefox */
+          -ms-user-select: none;
+          /* IE10+ */
+          /* Rules below not implemented in browsers yet */
+          -o-user-select: none;
+          user-select: none;
+          cursor: default;
+          box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+          -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+          -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+          -o-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+          -ms-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+          -moz-transition: box-shadow 0.2s ease;
+          -o-transition: box-shadow 0.2s ease;
+          -webkit-transition: box-shadow 0.2s ease;
+          -ms-transition: box-shadow 0.2s ease;
+          transition: box-shadow 0.2s ease;
+          cursor: pointer; }
+          .page > .faq > table tbody tr td div.blue {
+            border-bottom: solid 4px #0a2070; }
+          .page > .faq > table tbody tr td div.red {
+            border-bottom: solid 4px #700a0a; }
+          .page > .faq > table tbody tr td div:not(.isMobile):hover {
+            box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+            -webkit-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+            -moz-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+            -o-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+            -ms-box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); }
     .page > .faq > label > .item {
       height: 100px;
       border-style: solid;
